Bug 21137; make Shift-Reload force reload from server; r=radha@netscape.com